--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/common/matrix.js"></script>
         <script src="js/config.js"></script>
         <script src="js/stackplot.js"></script>
+        <script src="js/scatterplot.js"></script>
         <script src="js/app-react.js"></script>
         <script src="js/googleAnalytics.js"></script>
     </head>
