--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h3>StackPlot</h3>
-                    <p>Visualizing multiattribute data<p>
+                    <p>Visualize multiattribute data<p>
                 </div>
-                <div class="col-md-9">
-                    <svg id="canvas" width="800" height="800"></svg>
+                <div class="col-md-10">
+                    <svg id="canvas" width="1200" height="800"></svg>
                 </div>
             </div>
         </div>
