--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <div class="col-md-2">
                     <h3>StackPlot</h3>
                     <p>Visualize multiattribute data<p>
+                    <p style="float:left">Data </p>
+                    <select id="select-existing">
+                        <option name="" value="">Cereal</option>
+                        <option name="" value="">Flowers</option>
+                    </select>
                 </div>
                 <div class="col-md-10">
                     <svg id="canvas" width="1200" height="800"></svg>
